[jpro-imagemanager]: Change cache directory home to `user.home/.jpro/image-manager`